2004-10-24  0.8.1.40  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c, client/gtk/gui.h, client/gtk/trade.c: Removed the
	second global variable map. (The other is client/common/client.[ch])
	* client/gtk/guimap.c, client/gtk/guimap.h, client/gtk/histogram.c:
	Reenabled the dots that indicate the probability (when enough space in
	the hex/chit is available)
	* client/common/callback.c(can_move_ship),
	common/buildrec.c(can_setup_settlement): Removed the compiler warnings
	about losing const-ness, introduced in 0.8.1.39 (It is still cheating:
	a temporary non-const pointer is used to temporarily modify the map)
	* common/common_glib.c, common/common_glib.h, common/driver.h: Removed
	compiler warning: ISO C forbids passing arg 2 of pointer to function
	between function pointer and `void *'

2004-10-17  0.8.1.39  Roland Clobus <rclobus@bigfoot.com>
	* common/map.h, common/map_query.c: Fixed longest road detection
	* client/gtk/monopoly.c: No longer uses deprecated calls. Removed
	frame
	* client/callback.h, client/common/build.c, client/common/client.h,
	client/common/resource.c, client/common/setup.c,
	client/gtk/frontend.h, client/gtk/gui.c, client/gtk/guimap.c,
	client/gtk/guimap.h, client/gtk/interface.c, common/buildrec.c,
	common/buildrec.h, common/map.h, common/map_query.c: Many pointers are
	now const
	* client/common/robber.c: Removed unused code
	* client/gtk/frontend.c, client/gtk/gameover.c, client/gtk/resource.c:
	Replaced deprecated calls
	* client/gtk/gui.c, client/gtk/guimap.c, client/gtk/guimap.h: Single
	click building
	* common/log.c, common/log.h, common/gtk/common_gtk.c,
	common/gtk/common_gtk.h: Log uses less memory
	* server/player.c: Fix for lost longest road on reconnect

2004-10-08  0.8.1.38  Roland Clobus <rclobus@bigfoot.com>
	* All *.c: Added #include "config.h"
	* configure.in, ai/ai.c, client/ai/ai.c, client/gtk/connect.c,
	client/gtk/offline.c, common/Makefile.am,