@@ -25,6 +25,8 @@
 #include "log.h"
 #include "state.h"
 
+typedef void (*InputFunc)(gpointer);
+
 typedef struct {
 	/* function for freeing a widget */
 	void (*widget_free)(gpointer key, WidgetState *gui, StateMachine *sm);
@@ -35,8 +37,8 @@ typedef struct {
 	LogFunc log_write; /* ==> void log_write( gint msg_type, gchar *text ); */
 
 	/* event-loop related functions */
-	guint (*input_add_read)( gint fd, void (*func)(gpointer), gpointer param );
-	guint (*input_add_write)( gint fd, void (*func)(gpointer), gpointer param );
+	guint (*input_add_read)( gint fd, InputFunc func, gpointer param );
+	guint (*input_add_write)( gint fd, InputFunc func, gpointer param );
 	void (*input_remove)( guint tag );
 
 	/* callbacks for the server */
